@@ -15,9 +15,20 @@ remove = strict
 remove = Test::More
 
 [OSPrereqs / Cygwin]
-Alien::Packages::Cygwin                       = 0.02
+Alien::Packages::Cygwin                        = 0.02
+Alien::o2dll                                   = 0.02
+
+; TODO: need to include these on MSWin32
+; but there is already a MSWin32 section (see below)
+;[OSPrereqs / MSWin32]
+;Alien::Libarchive::MSWin32                     = 0.02
+;Alien::o2dll                                   = 0.02
 
 [Prereqs]
+Alien::bz2                                     = 0.09
+Alien::Libarchive                              = 0.11
+Alien::MSYS                                    = 0.04
+;Alien::o2dll                                  = 0.02
 ;Alien::Packages::Cygwin                       = 0.02
 AnyEvent::Finger                               = 0.08
 AnyEvent::Git::Wrapper                         = 0.05
@@ -27,13 +38,26 @@ AnyEvent::WebSocket::Client                    = 0.20
 App::cpangitify                                = 0.07
 App::RegexFileUtils                            = 0.06
 App::which_package                             = 0.05
+Archive::Ar::Libarchive                        = 0.04
 Authen::Simple::PlugAuth                       = 0.01
-Clustericious                                  = 0.9931
+Clustericious                                  = 0.9932
 Clustericious::Admin                           = 0.23
 Clustericious::Client                          = 0.85
-Clustericious::Config                          = 0.26
+Clustericious::Config                          = 0.27
 Clustericious::Log                             = 0.14
-File::Listing::Ftpcopy                         = 0.04
+Dist::Zilla::MintingProfile::Clustericious     = 0.02
+Dist::Zilla::Plugin::CSS::Compressor           = 0.02
+Dist::Zilla::Plugin::InsertExample             = 0.03
+Dist::Zilla::Plugin::JavaScript::Minifier      = 0.02
+Dist::Zilla::Plugin::jQuery                    = 0.03
+Dist::Zilla::Plugin::MathInt64                 = 0.05
+;Dist::Zilla::Plugin::ModuleBuildDatabase      = 0.05
+Dist::Zilla::Plugin::Template::Tiny            = 0.04
+Dist::Zilla::Plugin::TextTabs                  = 0.03
+Dist::Zilla::Plugin::TwitterBootstrap          = 0.04
+Dist::Zilla::PluginBundle::ACPS                = 0.27
+Dist::Zilla::PluginBundle::Author::Plicease    = 1.42
+File::Listing::Ftpcopy                         = 0.05
 Lingua::Alphabet::Phonetic::LAPD               = 0.02
 Log::Log4perl::Appender::TAP                   = 0.02
 Mojolicious::Plugin::Ident                     = 0.30
@@ -49,13 +73,14 @@ PlugAuth::Plugin::Finger                       = 0.01
 PlugAuth::Plugin::LDAP                         = 0.05
 Shell::Config::Generate                        = 0.08
 Shell::Guess                                   = 0.01
+Test::CChecker                                 = 0.05
 Test::Clustericious::Cluster                   = 0.12
 Test::Fixme                                    = 0.10
 URI::ws                                        = 0.03
 WebService::LiveJournal                        = 0.06
 WebService::TwitterBootstrap::Download::Custom = 0.03
 WWW::Bugzilla::BugTree                         = 0.03
-Yars                                           = 0.91
+Yars                                           = 0.92
 Yars::Client                                   = 0.91
 
 AnyEvent                                       = 0
