@@ -1,8 +1,11 @@
 use strict;
 use warnings;
 BEGIN { eval q{ use EV; } }
-use Test::More tests => 105;
+use Test::More tests => 121;
 use_ok 'Task::BeLike::Plicease';
+require_ok 'Alien::bz2';
+require_ok 'Alien::Libarchive';
+require_ok 'Alien::MSYS';
 require_ok 'AnyEvent';
 require_ok 'AnyEvent::Finger';
 require_ok 'AnyEvent::Git::Wrapper';
@@ -15,6 +18,7 @@ require_ok 'App::cpangitify';
 require_ok 'App::cpanminus';
 require_ok 'App::RegexFileUtils';
 require_ok 'App::which_package';
+require_ok 'Archive::Ar::Libarchive';
 require_ok 'Authen::Simple';
 require_ok 'Authen::Simple::PlugAuth';
 require_ok 'autodie';
@@ -30,6 +34,17 @@ require_ok 'DBD::SQLite';
 require_ok 'DBI';
 require_ok 'Devel::StackTrace';
 require_ok 'Digest::MD5';
+require_ok 'Dist::Zilla::MintingProfile::Clustericious';
+require_ok 'Dist::Zilla::Plugin::CSS::Compressor';
+require_ok 'Dist::Zilla::Plugin::InsertExample';
+require_ok 'Dist::Zilla::Plugin::JavaScript::Minifier';
+require_ok 'Dist::Zilla::Plugin::jQuery';
+require_ok 'Dist::Zilla::Plugin::MathInt64';
+require_ok 'Dist::Zilla::Plugin::Template::Tiny';
+require_ok 'Dist::Zilla::Plugin::TextTabs';
+require_ok 'Dist::Zilla::Plugin::TwitterBootstrap';
+require_ok 'Dist::Zilla::PluginBundle::ACPS';
+require_ok 'Dist::Zilla::PluginBundle::Author::Plicease';
 require_ok 'EV';
 require_ok 'File::chdir';
 require_ok 'File::IgnoreReadonly';
@@ -78,6 +93,7 @@ require_ok 'Shell::Guess';
 require_ok 'String::Template';
 require_ok 'Template';
 require_ok 'Template::Tiny';
+require_ok 'Test::CChecker';
 require_ok 'Test::Clustericious::Cluster';
 require_ok 'Test::Differences';
 require_ok 'Test::Dir';
